# utilities/validators/user_validators.js
@@ -16,10 +16,11 @@ const STRS = {
     INVALID_SEX: 'Sex is invalid. Accepted values are '+ models.User.rawAttributes.sex.values,
     EMAIL_NOT_VERIFIED: 'Your email is not verified',
     LOGGED_IN_SUCCESSFUL: 'You have been logged in successful',
-    INACTIVE_ACCOUNT: 'Your account have been deactivated'
+    INACTIVE_ACCOUNT: 'Your account have been deactivated',
+    INVALID_ROLE: 'You can only singup as consumer or realtor',
 };
 
-const validateAndSanitizeSignupDetails = async function (email, name, password, sex) {
+const validateAndSanitizeSignupDetails = async function (email, name, password, sex, role) {
     if (!validator.isEmail(email))
         return {status: false, message: STRS.INVALID_EMAIL};
     if (validator.trim(name, '').length < STRS.NAME_MIN_LENGTH)
@@ -28,6 +29,8 @@ const validateAndSanitizeSignupDetails = async function (email, name, password, 
         return {status: false, message: STRS.INVALID_PASSWORD};
     if(!models.User.rawAttributes.sex.values.includes(sex))
         return {status: false, message: STRS.INVALID_SEX};
+    if (role && !['consumer', 'realtor'].includes(role))
+        return {status: false, message: STRS.INVALID_ROLE};
 
 
     let count = await models.User.count({where: {email: validator.trim(email, '').toLowerCase()}});
@@ -40,7 +43,8 @@ const validateAndSanitizeSignupDetails = async function (email, name, password, 
             email: validator.trim(email, '').toLowerCase(),
             name: validator.trim(name, ''),
             password: validator.trim(password, ''),
-            sex: sex
+            sex: sex,
+            role: role,
         }
 
     }
